<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">Shredaholic</string>
    <string name="title_section1">Shred</string>
    <string name="title_section2">History</string>
    <string name="title_section3">Setting</string>
    <string name="title_activity_result">ResultActivity</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tracking -->
    <string name="speed">Speed</string>
    <string name="air_time">Air Time</string>
    <string name="max_air_time">Max Air Time</string>
    <string name="duration">Duration</string>

    <!-- History Fragment -->
    <string name="histo_index_divider">in</string>

    <string name="histo_max_speed_label">Max Speed</string>
    <string name="histo_avg_speed_label">Avg Speed</string>
    <string name="histo_air_time_label">Max Air Time</string>
    <string name="histo_jump_distance_label">Longest Jump</string>

    <string name="delete_track_title">Delete Track</string>
    <string name="delete_track_message">Are you sure to delelte this track record</string>

    <!-- Setting Fragment -->
    <string name="username_placeholder">Duke Cabbage</string>

    <string name="speed_unit_label">Speed unit</string>
    <string name="time_unit_label">Time unit</string>

    <string name="auto_off_timer_label">Turn off tracking after </string>
    <string name="auto_off_timer_label_zero">Automatically turn off tracking</string>
    <string name="auto_off_lift_label">Turn off tracking on lift</string>
    <string name="rate_us_label">Rate Shredaholic</string>

    <string name="veloUnit0">Kilometres \n per hour</string>
    <string name="veloUnit1">Metres \n per sec</string>
    <string name="veloUnit2">Miles \n per hour</string>
    <string name="timeUnit0">Seconds</string>
    <string name="timeUnit1">Milli sec</string>

    <!--Result Fragment-->
    <string name="result_max_speed_label">Max Speed</string>
    <string name="result_avg_speed_label">Average Speed</string>
    <string name="result_air_time_label">Max Air Time</string>
    <string name="result_jump_distance_label">Longest Jump</string>

    <string name="result_done_btn">Done</string>
    <string name="result_continue_btn">Continue</string>

    <string name="share">Share</string>
    <string name="love_it">Love It!</string>
    <string name="heart">heart</string>

    <string name="none"></string>
    <string name="title_activity_crop_photo">CropPhotoActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
