<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/normal_padding"
    android:paddingStart="@dimen/bigger_padding"
    android:paddingEnd="@dimen/normal_padding"
    android:background="@color/primary"
    android:orientation="vertical">

    <View
        android:id="@+id/result_data_split_anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/result_data_number_column_width"/>

    <RelativeLayout
        android:id="@+id/rl_max_speed_left"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/result_data_split_anchor"
        android:layout_alignEnd="@id/result_data_split_anchor">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_max_speed_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/result_max_speed_label"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/result_label_font_size"
            geekui:customTypeface="fonts/OpenSans-Semibold.ttf" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/bar_max_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/result_bar_thickness"
            android:maxHeight="@dimen/result_bar_thickness"
            android:layout_below="@id/tv_max_speed_label"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/big_padding"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/result_progress_bar"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_max_speed_right"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/result_data_split_anchor"
        android:layout_alignStart="@id/result_data_split_anchor"
        android:gravity="bottom|end"
        android:paddingBottom="@dimen/big_padding"
        android:orientation="horizontal">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_max_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_value_font_size"
            geekui:customTypeface="fonts/OpenSans-Light.ttf" />

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_max_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_unit_font_size"
            geekui:customTypeface="fonts/OpenSans-Regular.ttf" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_avg_speed_left"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/rl_max_speed_left"
        android:layout_alignEnd="@id/result_data_split_anchor">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_avg_speed_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/result_avg_speed_label"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/result_label_font_size"
            geekui:customTypeface="fonts/OpenSans-Semibold.ttf" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/bar_avg_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/result_bar_thickness"
            android:maxHeight="@dimen/result_bar_thickness"
            android:layout_below="@id/tv_avg_speed_label"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/big_padding"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/result_progress_bar"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_avg_speed_right"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/rl_max_speed_right"
        android:layout_alignStart="@id/result_data_split_anchor"
        android:gravity="bottom|end"
        android:paddingBottom="@dimen/big_padding"
        android:orientation="horizontal">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_avg_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_value_font_size"
            geekui:customTypeface="fonts/OpenSans-Light.ttf" />

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_avg_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_unit_font_size"
            geekui:customTypeface="fonts/OpenSans-Regular.ttf" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_max_air_left"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/rl_avg_speed_left"
        android:layout_alignEnd="@id/result_data_split_anchor">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_max_air_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/result_air_time_label"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/result_label_font_size"
            geekui:customTypeface="fonts/OpenSans-Semibold.ttf" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/bar_max_air"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/result_bar_thickness"
            android:maxHeight="@dimen/result_bar_thickness"
            android:layout_below="@id/tv_max_air_label"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/big_padding"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/result_progress_bar"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_max_air_right"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/rl_avg_speed_right"
        android:layout_alignStart="@id/result_data_split_anchor"
        android:gravity="bottom|end"
        android:paddingBottom="@dimen/big_padding"
        android:orientation="horizontal">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_max_air_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_value_font_size"
            geekui:customTypeface="fonts/OpenSans-Light.ttf" />

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@id/tv_max_air_time_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_unit_font_size"
            geekui:customTypeface="fonts/OpenSans-Regular.ttf" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_jump_distance_left"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/rl_max_air_left"
        android:layout_alignEnd="@id/result_data_split_anchor">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_jump_distance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/result_jump_distance_label"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/result_label_font_size"
            geekui:customTypeface="fonts/OpenSans-Semibold.ttf" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/bar_jump_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/result_bar_thickness"
            android:maxHeight="@dimen/result_bar_thickness"
            android:layout_below="@id/tv_jump_distance_label"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/big_padding"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/result_progress_bar"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_jump_distance_right"
        android:layout_height="@dimen/result_data_height"
        android:layout_width="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/rl_max_air_right"
        android:layout_alignStart="@id/result_data_split_anchor"
        android:paddingBottom="@dimen/big_padding"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_jump_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_value_font_size"
            geekui:customTypeface="fonts/OpenSans-Light.ttf" />

        <com.gloomy.shreddingrobot.Widget.TypefaceTextView
            android:id="@+id/tv_jump_distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/result_unit_font_size"
            geekui:customTypeface="fonts/OpenSans-Regular.ttf" />
    </LinearLayout>
</RelativeLayout>